# lg-api

./: .flake8  .gitattributes  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
examples/: communities.txt  config.yml.example  env.example  lgapi.service  nginx-subpath.conf  nginx.conf
lgapi/: __init__.py  asrank.py  cache.py  commands.py  config.py  cymru.py  database.py  datamodels.py  decorators.py  device.py  locations.py  main.py  maps.py  parsing.py  processing.py  resolver.py  ttp.py  types.py  validation.py  workers.py
lgapi/processing/: asrank.py  bgp.py  cymru.py  ping.py  traceroute.py
lgapi/ttp_templates/: cisco_iosxr_bgp.ttp  cisco_iosxr_ping.ttp  cisco_iosxr_traceroute.ttp  juniper_junos_bgp.ttp  juniper_junos_ping.ttp  juniper_junos_traceroute.ttp
lgapi/types/: config.py  models.py  returntypes.py
mapsdb/: .gitignore
mapsdb/asns/: 1299.txt  174.txt  2764.txt  2914.txt  3257.txt  3320.txt  3356.txt  3491.txt  6453.txt  8220.txt  9002.txt
tests/: __init__.py  test_lg.py
