[tool.poetry]
name = "lgapi"
version = "1.1.1"
description = "Python Network Looking Glass backend API."
authors = ["Rob Woodward <rob@twfmail.uk>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/lg-api"
include = ["README.md", "LICENSE", "examples"]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
ttp = "^0.9.2"
scrapli = "^2025.1.30"
asyncssh = "^2.20.0"
fastapi = { extras = ["standard"], version = "^0.115.12" }
pydantic-settings = {extras = ["ruyaml"], version = "^2.9.1"}
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
dnspython = {extras = ["async"], version = "^2.7.0"}
aiocache = {extras = ["redis"], version = "^0.12.3"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.1"
pylint = "^3.3.0"
pydocstyle = "^6.1.1"
flake8 = "^7.2.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
