[project]
name = "lgapi"
version = "1.1.2"
description = "Python Network Looking Glass backend API."

authors = [
    {name = "Rob Woodward", email = "rob@twfmail.uk"},
]
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = "<4.0,>=3.12"

dependencies = [
    "pyyaml<7.0,>=6.0",
    "ttp<1.0.0,>=0.10.0",
    "scrapli<2026.0.0,>=2025.1.30",
    "asyncssh<3.0.0,>=2.20.0",
    "fastapi[standard]<1.0,>=0.121",
    "pydantic-settings[ruyaml]<3.0.0,>=2.9.1",
    "python-dotenv<2.0.0,>=1.1.0",
    "gunicorn<24.0.0,>=23.0.0",
    "aiosqlite<1.0.0,>=0.21.0",
    "httpx<1.0.0,>=0.28.1",
    "dnspython[async]<3.0.0,>=2.7.0",
    "aiocache[redis]<1.0.0,>=0.12.3",
]


[project.urls]
repository = "https://github.com/robwdwd/lg-api"

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "flake8>=7.1.1",
    "black>=25.1.0",
    "pytest>=8.3.2",
    "pydocstyle>=6.3.0",
    "pylint>=3.2.7",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"